--- a/website/index.html
+++ b/website/index.html
@@ -13,12 +13,12 @@
     </header>
     <section>
     <div class="stream">
-        <img src="./src/img/cameraview.png" alt="" width="600px">
+        <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
     </div>
     <div class="controls">
-        <button class="left">←</button>
+        <button class="left">🠔</button>
         <button class="fire">🞜</button>
-        <button class="right">→</button>
+        <button class="right">🠖</button>
     </div>
     <div class="mode">
         <p>Select mode:</p>
