added logo's to webpage.

--- a/website/index.html
+++ b/website/index.html
@@ -37,6 +37,8 @@
     </div>
     </section>
     <footer>
+        <div class="vives-logo"><img src="./src/img/Vives-logo-small.png" alt=""></div>
+        <div class="logo"><img src="./src/img/TeamTurretWhite.png" alt=""></div>
     </footer>
 </body>
 </html>
