--- a/website/index.html
+++ b/website/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projectweek</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c2d28f360e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>Tommy's Blaster</h1>
+        <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
     <section>
     <div class="stream">
         <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
     </div>
     <div class="controls">
-        <button class="left">🠔</button>
-        <button class="fire">🞜</button>
-        <button class="right">🠖</button>
+        <button class="left"><i class="fas fa-caret-left"></i></button>
+        <button class="fire"><i class="fas fa-crosshairs"></i></button>
+        <button class="right"> <i class="fas fa-caret-right"></i></button>
     </div>
     <div class="mode">
         <p>Select mode:</p>
