implemented websocket and mqtt communication

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     <title>Projectweek</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c2d28f360e.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
+    <script src="./index.js" defer></script>
 </head>
 <body>
     <header>
@@ -17,9 +19,9 @@
         <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
     </div>
     <div class="controls">
-        <button class="left"><i class="fas fa-caret-left"></i></button>
-        <button class="fire"><i class="fas fa-crosshairs"></i></button>
-        <button class="right"> <i class="fas fa-caret-right"></i></button>
+        <button id="left"><i class="fas fa-caret-left"></i></button>
+        <button id="fire"><i class="fas fa-crosshairs"></i></button>
+        <button id="right"><i class="fas fa-caret-right"></i></button>
     </div>
     <div class="mode">
         <p>Select mode:</p>
