removed unused CDN

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,6 @@
     <title>Projectweek</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c2d28f360e.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
     <script src="./index.js" defer></script>
 </head>
 <body>
@@ -25,16 +24,16 @@
     </div>
     <div class="mode">
         <p>Select mode:</p>
-        <input type="radio" name="mode" id="selectMode1" value="manual" checked>
+        <input type="radio" name="mode" id="manual" value="manual" checked>
         <label for="selectMode1">Manual</label>
         
-        <input type="radio" name="mode" id="selectMode2" value="auto">
+        <input type="radio" name="mode" id="auto" value="auto">
         <label for="selectMode2">Automatic</label>
 
-        <input type="radio" name="mode" id="selectMode3" value="halfauto">
+        <input type="radio" name="mode" id="half-auto" value="halfauto">
         <label for="selectMode3">Half-automatic</label>
 
-        <input type="radio" name="mode" id="selectMode4" value="defense">
+        <input type="radio" name="mode" id="defense" value="defense">
         <label for="selectMode4">Defense</label>
 
     </div>
