--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
+    <div class="img"></div>
     <section>
     <div class="stream">
         <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
