display coordinates cursor

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
-    <div class="img"></div>
+    <div class="img" onclick="showCoords(event)"></div>
+    <p id="demo"></p>
     <section>
     <div class="stream">
         <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
