fixed stream size

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,34 +15,34 @@
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
-    <div class="img"></div>
     <section>
-    <div class="stream">
-        <img src="./src/img/cameraview.png" alt="placeholder" width="600px">
-    </div>
-    <div class="controls">
-        <button id="left"><i class="fas fa-caret-left"></i></button>
-        <button id="fire"><i class="fas fa-crosshairs"></i></button>
-        <button id="right"><i class="fas fa-caret-right"></i></button>
-    </div>
-    <div>
-        <p id="turret-angle">0°</p>
-    </div>
-    <div class="mode">
-        <p>Select mode:</p>
-        <input type="radio" name="mode" id="manual" value="manual" checked>
-        <label for="selectMode1">Manual</label>
-        
-        <input type="radio" name="mode" id="auto" value="auto">
-        <label for="selectMode2">Automatic</label>
+        <div class="stream">
+            <!-- <img src="./src/img/cameraview.png" alt="placeholder" width="600px"> -->
+            <div class="img"></div>
+        </div>
+        <div class="controls">
+            <button id="left"><i class="fas fa-caret-left"></i></button>
+            <button id="fire"><i class="fas fa-crosshairs"></i></button>
+            <button id="right"><i class="fas fa-caret-right"></i></button>
+        </div>
+        <div>
+            <p id="turret-angle">0°</p>
+        </div>
+        <div class="mode">
+            <p>Select mode:</p>
+            <input type="radio" name="mode" id="manual" value="manual" checked>
+            <label for="selectMode1">Manual</label>
+            
+            <input type="radio" name="mode" id="auto" value="auto">
+            <label for="selectMode2">Automatic</label>
 
-        <input type="radio" name="mode" id="half-auto" value="halfauto">
-        <label for="selectMode3">Half-automatic</label>
+            <input type="radio" name="mode" id="half-auto" value="halfauto">
+            <label for="selectMode3">Half-automatic</label>
 
-        <input type="radio" name="mode" id="defense" value="defense">
-        <label for="selectMode4">Defense</label>
+            <input type="radio" name="mode" id="defense" value="defense">
+            <label for="selectMode4">Defense</label>
 
-    </div>
+        </div>
     </section>
     <footer>
         <div class="vives-logo"><img src="./src/img/Vives-logo-small.png" alt=""></div>
