--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,11 +15,11 @@
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
-    <p id="demo"></p>
+    <p id="coords"></p>
     <section>
-        <div class="stream">
+        <div class="streamContainer">
             <!-- <img src="./src/img/cameraview.png" alt="placeholder" width="600px"> -->
-            <div class="img" onclick="showCoords(event)"></div>
+            <div id="stream" onclick="showCoords(event)" name="viewport"></div>
         </div>
         <div class="controls">
             <button id="left"><i class="fas fa-caret-left"></i></button>
