changed slider styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,9 @@
             <div id="stream" onclick="showCoords(event)" name="viewport"></div>
         </div>
 
-        <div class="sliders">
+        <div class="sliderContainer">
             <p>Power: </p>
-            <input type="range" min="1" max="100" value="0" id="power" class="power">
+            <input type="range" min="1" max="100" value="0" id="power" class="slider">
         </div>
     </div>
 
