provided mqtt and keyboard functionality for slider

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,13 +27,13 @@
 
         <div class="sliderContainer">
             <p>Power: </p>
-            <input type="range" min="1" max="100" value="0" id="power" class="slider">
+            <input type="range" min="0" max="2000" value="0" step="200" id="power" class="slider">
         </div>
     </div>
 
         <div class="controls">
             <button id="left"><i class="fas fa-caret-left"></i></button>
-            <button id="fire"><i class="fas fa-crosshairs"></i></button>
+            <button id="fire" autofocus><i class="fas fa-crosshairs"></i></button>
             <button id="right"><i class="fas fa-caret-right"></i></button>
         </div>
         <div>
