--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
 
         <div class="streamContainer">
             <!-- <img src="./src/img/cameraview.png" alt="placeholder" width="600px"> -->
-            <div id="stream" onclick="showCoords(event)" name="viewport"></div>
+            <div id="stream" name="viewport"></div>
         </div>
 
         <div class="sliderContainer">
