--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Projectweek</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c2d28f360e.js" crossorigin="anonymous"></script>
@@ -11,15 +11,15 @@
     <script src="./src/index.js" defer></script>
     <script src="./src/keyboardControls.js" defer></script>
 </head>
-<body>
+<body onclick="showCoords(event)" name="viewport">
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
     <p id="coords"></p>
     <section>
-        <div class="streamContainer">
+        <div class="streamContainer" >
             <!-- <img src="./src/img/cameraview.png" alt="placeholder" width="600px"> -->
-            <div id="stream" onclick="showCoords(event)" name="viewport"></div>
+            <div id="stream"></div>
         </div>
         <div class="controls">
             <button id="left"><i class="fas fa-caret-left"></i></button>
