--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <script src="./src/index.js" defer></script>
     <script src="./src/keyboardControls.js" defer></script>
 </head>
-<body onclick="showCoords(event)" name="viewport">
+<body>
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
