--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
     <script src="./src/index.js" defer></script>
     <script src="./src/keyboardControls.js" defer></script>
 </head>
-<body onclick="showCoords(event)" name="viewport">
+<body>
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
-    <p id="coords"></p>
+    <p id="coords">X: ,Y:</p>
     <section>
         <div class="wrapper">
             <div class="whitespace"></div>
