--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,17 @@
     <script src="./src/websocket.js" defer></script>
     <script src="./src/index.js" defer></script>
     <script src="./src/keyboardControls.js" defer></script>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/img/favicon-16x16.png">
+    <link rel="manifest" href="./src/img/site.webmanifest">
+    <link rel="mask-icon" href="./src/img/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./src/img/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="./src/img/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
     <header>
