added dynamic modi button styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,11 +44,18 @@
 
         <div class="controls">
             <button id="left"><i class="fas fa-caret-left"></i></button>
-            <button id="fire" autofocus><i class="fas fa-crosshairs"></i></button>
+            <button id="fire"><i class="fas fa-crosshairs"></i></button>
             <button id="right"><i class="fas fa-caret-right"></i></button>
         </div>
         <div>
             <p id="turret-angle">0°</p>
+        </div>
+        <div class="mode">
+            <p>Select mode:</p>
+            <div class="modi-container">
+                <button id="manual" autofocus>Manual</button>
+                <button id="automatic">Automatic</button>
+            </div>
         </div>
     </section>
     <footer>
