added automatic game-modes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <script src="./src/websocket.js" defer></script>
     <script src="./src/index.js" defer></script>
     <script src="./src/keyboardControls.js" defer></script>
+    <script src="./src/difficulties.js" defer></script>
     
     <link rel="apple-touch-icon" sizes="180x180" href="./src/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
@@ -56,6 +57,9 @@
                 <button id="manual" autofocus>Manual</button>
                 <button id="automatic">Automatic</button>
             </div>
+            <button id="easy-mode">Easy Mode</button>
+            <button id="medium-mode">Medium Mode</button>
+            <button id="hard-mode">Hard Mode</button>
         </div>
     </section>
     <footer>
