added margin to modi

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,9 +58,11 @@
                 <button id="manual" autofocus>Manual</button>
                 <button id="automatic">Automatic</button>
             </div>
-            <button id="easy-mode">Easy Mode</button>
-            <button id="medium-mode">Medium Mode</button>
-            <button id="hard-mode">Hard Mode</button>
+            <div class="mode-selector">
+                <button id="easy-mode">Easy Mode</button>
+                <button id="medium-mode">Medium Mode</button>
+                <button id="hard-mode">Hard Mode</button>
+            </div>
         </div>
     </section>
     <footer>
