--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,8 +27,8 @@
     <header>
         <h1><i class="fas fa-table-tennis"></i> Tommy's Blaster</h1>
     </header>
-    <p id="coords">X: 0, Y:0</p>
     <section>
+        <p id="coords">X: 0, Y: 0</p>
         <div class="wrapper">
             <div class="whitespace"></div>
 
@@ -39,7 +39,7 @@
 
         <div class="sliderContainer">
             <p>Power: <input type="text" id="powerValue" value="" maxlength="4" readonly></p>
-            <input type="range" min="0" max="2000" value="0" step="200" id="power" class="slider" onchange="updatePowerValue(this.value);">
+            <input type="range" min="0" max="2000" value="0" step="200" id="power" class="slider" onchange="updatePowerValue(this.value);" placeholder="0">
             
         </div>
     </div>
